# api-gen

./: .gitignore  Cargo.toml  CommandLineHelp.md  README.md  TODO.md  config-gherkin.yaml  config.yaml
.github/workflows/: release.yml
config_data/: config.yaml  model.template  service.template
src/: config.rs  init.rs  json_tera_extensions.rs  main.rs  serde_method.rs  sparse_method.rs  tera_extensions.rs
templates/: _model.dart  gherkin.feature  model-endpoint.dart  service.dart
wix/: License.rtf  main.wxs
