[package]
name = "api-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oapi = { git = "https://github.com/ZimboPro/oapi.git" }
sppparse = "0.1.4"
tera = "1.19.1"
simplelog = { version = "0.12.1", features = ["paris"] }
clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1.0.75"
merge-yaml-hash = "0.2.0"
temp-file = "0.1.7"
openapiv3 = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4.0"
tera-text-filters = "1.0.0"
indexmap = "1.9.3"
serde_json = "1.0.111"
clap-markdown = "0.1.3"
