[package]
name = "api-gen"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ZimboPro/api-gen.git"
authors = ["ZimboPro <dejagerleslie@gmail.com>"]
license = "MIT"
description = "Generate API code from OpenAPI 3.0 YAML files using templates"
readme = "README.md"


[package.metadata.wix]
upgrade-guid = "C886D675-B4B3-4D35-951F-FA4C5EBF7362"
path-guid = "92041F80-38C0-4C8E-AD99-05484F86B9B7"
license = true
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oapi = { git = "https://github.com/ZimboPro/oapi.git" }
sppparse = "0.1.4"
tera = "1.19.1"
simplelog = { version = "0.12.1", features = ["paris"] }
clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1.0.75"
merge-yaml-hash = "0.2.0"
temp-file = "0.1.7"
openapiv3 = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4.0"
tera-text-filters = "1.0.0"
indexmap = "1.9.3"
serde_json = "1.0.111"
clap-markdown = "0.1.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
